Fixed navbar spacing

--- a/client/components/NavBar/NavBar.scss
+++ b/client/components/NavBar/NavBar.scss
@@ -4,11 +4,11 @@
   position: fixed !important;
   bottom: 0;
 
-  .nav {
+  .navbar-nav {
     width: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   .nav-item {
@@ -16,20 +16,19 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    width: 25%;
 
     .navbar-button {
       width: 20px;
       height: 20px;
       padding: 0;
+      border: none;
+      background-color: #e0e0e0;
     }
 
     p {
       font-size: 12px;
       line-height: 12px;
     }
-  }
-
-  .active {
-    color: red;
   }
 }
