--- a/public/static/Account.scss
+++ b/public/static/Account.scss
@@ -9,8 +9,8 @@
 .logo {
   margin-top: 40px;
   border-radius: 100px;
-  width: 75px;
-  height: 75px;
+  width: 115px;
+  height: 115px;
   border: none;
   background-color: lightGray;
 }
@@ -43,12 +43,12 @@
 }
 
 .account-button {
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   background-color: #c4c4c4;
   border-radius: 137px;
   border: none;
   width: 255px;
-  padding: 20px;
+  padding: 15px;
 
   font-weight: bold;
   font-size: 22px;
